--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>يوسف الصباحي | مطور ويب شامل</title>
+    <title>يوسف الصباحي | مبرمج مواقع محترف</title>
+  
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="يوسف الصباحي | مبرمج مواقع محترف" />
+    <meta name="description" content="أنا يوسف الصباحي، مطور ويب محترف أصنع مواقع تبهر جمهورك وتحقق أهدافك التجارية باستخدام Laravel وReact وTailwind. لو عندك فكرة، أقدر أحوّلها لحل رقمي ناجح." />
+    <meta name="keywords" content="يوسف الصباحي, مبرمج مواقع, تصميم مواقع للشركات, مطور مواقع مصر, عمل موقع إلكتروني, مطور Laravel, مطور React, بناء مواقع احترافية, مواقع أعمال, تطوير متاجر إلكترونية, خدمات برمجة مواقع" />
+    <meta name="author" content="يوسف الصباحي" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Language" content="ar" />
+  
+    <!-- Canonical -->
+    <link rel="canonical" href="https://yooussef.com" />
+  
+    <!-- Favicon -->
+    <link rel="icon" href="/public/images/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/images/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/images/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/images/favicon.png" />
+  
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0f172a" />
+  
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yooussef.com" />
+    <meta property="og:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
+    <meta property="og:description" content="أنا يوسف الصباحي، أصنع مواقع ذكية ومبهرة تساعد شركتك أو مشروعك في جذب العملاء وتحقيق نتائج." />
+    <meta property="og:image" content="https://yooussef.com/public/images/og.jpg" />
+    <meta property="og:site_name" content="يوسف الصباحي | Web Developer" />
+    <meta property="og:locale" content="ar_AR" />
+  
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://yooussef.com" />
+    <meta name="twitter:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
+    <meta name="twitter:description" content="خد فكرتك وخليني أحوّلها لموقع ناجح ومميز باستخدام أحدث تقنيات الويب." />
+    <meta name="twitter:image" content="https://yooussef.com/public/images/og.jpg" />
+  
+    <!-- Apple Specific -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="يوسف الصباحي" />
+  
+    <!-- Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+  
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "يوسف الصباحي",
+        "url": "https://yooussef.com",
+        "image": "https://yooussef.com/public/images/og.jpg",
+        "jobTitle": "Full Stack Web Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelancer"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/youssef-elsabbahy",
+          "https://github.com/youssefweb1",
+          "https://www.tiktok.com/@yooussef.tech"
+        ]
+      }
+      </script>
+<!-- Google Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W1FEKN1HRB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W1FEKN1HRB');
+</script>     
+    <!-- Dark Mode Default -->
     <script>
-      // Force dark mode on initial load
-      (function() {
+      (function () {
         document.documentElement.classList.add('dark');
         localStorage.setItem('ui-theme', 'dark');
       })();
     </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
