--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   
     <!-- Primary Meta Tags -->
     <meta name="title" content="يوسف الصباحي | مبرمج مواقع محترف" />
-    <meta name="description" content="أنا يوسف الصباحي، مطور ويب محترف أصنع مواقع تبهر جمهورك وتحقق أهدافك التجارية باستخدام Laravel وReact وTailwind. لو عندك فكرة، أقدر أحوّلها لحل رقمي ناجح." />
+    <meta name="description" content="أنا يوسف الصباحي، مطور ويب متخصص في تصميم وتطوير مواقع الإنترنت التي تلبي احتياجات عملك وتحقق أهدافك. أعمل على تحويل أفكارك إلى حلول رقمية مبتكرة تساهم في نجاح أعمالك وتوسيع نطاقها." />
     <meta name="keywords" content="يوسف الصباحي, مبرمج مواقع, تصميم مواقع للشركات, مطور مواقع مصر, عمل موقع إلكتروني, مطور Laravel, مطور React, بناء مواقع احترافية, مواقع أعمال, تطوير متاجر إلكترونية, خدمات برمجة مواقع" />
     <meta name="author" content="يوسف الصباحي" />
     <meta name="robots" content="index, follow" />
