--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <meta property="og:url" content="https://yooussef.com" />
     <meta property="og:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
     <meta property="og:description" content="أنا يوسف الصباحي، أصنع مواقع ذكية ومبهرة تساعد شركتك أو مشروعك في جذب العملاء وتحقيق نتائج." />
-    <meta property="og:image" content="https://yooussef.com/public/images/og.jpg" />
+    <meta property="og:image" content="public/images/og.jpg" />
     <meta property="og:site_name" content="يوسف الصباحي | Web Developer" />
     <meta property="og:locale" content="ar_AR" />
   
@@ -40,7 +40,7 @@
     <meta name="twitter:url" content="https://yooussef.com" />
     <meta name="twitter:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
     <meta name="twitter:description" content="خد فكرتك وخليني أحوّلها لموقع ناجح ومميز باستخدام أحدث تقنيات الويب." />
-    <meta name="twitter:image" content="https://yooussef.com/public/images/og.jpg" />
+    <meta name="twitter:image" content="public/images/og.jpg" />
   
     <!-- Apple Specific -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
