--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yooussef.com" />
-    <meta property="og:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
+    <meta property="og:title" content="يوسف الصباحي | مطور ويب متخصص في تحويل أفكارك إلى مواقع مبتكرة" />
     <meta property="og:description" content="أنا يوسف الصباحي، أصنع مواقع ذكية ومبهرة تساعد شركتك أو مشروعك في جذب العملاء وتحقيق نتائج." />
     <meta property="og:image" content="public/images/og.jpg" />
     <meta property="og:site_name" content="يوسف الصباحي | Web Developer" />
