--- a/client/index.html
+++ b/client/index.html
@@ -2,54 +2,68 @@
 <html lang="ar" dir="rtl" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>يوسف الصباحي | مبرمج مواقع محترف</title>
-  
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="يوسف الصباحي | مبرمج مواقع محترف" />
-    <meta name="description" content="أنا يوسف الصباحي، مطور ويب متخصص في تصميم وتطوير مواقع الإنترنت التي تلبي احتياجات عملك وتحقق أهدافك. أعمل على تحويل أفكارك إلى حلول رقمية مبتكرة تساهم في نجاح أعمالك وتوسيع نطاقها." />
-    <meta name="keywords" content="يوسف الصباحي, مبرمج مواقع, تصميم مواقع للشركات, مطور مواقع مصر, عمل موقع إلكتروني, مطور Laravel, مطور React, بناء مواقع احترافية, مواقع أعمال, تطوير متاجر إلكترونية, خدمات برمجة مواقع" />
+    <meta name="description"
+      content="أنا يوسف الصباحي، مطور ويب متخصص في تصميم وتطوير مواقع الإنترنت التي تلبي احتياجات عملك وتحقق أهدافك. أعمل على تحويل أفكارك إلى حلول رقمية مبتكرة تساهم في نجاح أعمالك وتوسيع نطاقها." />
+    <meta name="keywords"
+      content="يوسف الصباحي, مبرمج مواقع, تصميم مواقع للشركات, مطور مواقع مصر, عمل موقع إلكتروني, مطور Laravel, مطور React, بناء مواقع احترافية, مواقع أعمال, تطوير متاجر إلكترونية, خدمات برمجة مواقع" />
     <meta name="author" content="يوسف الصباحي" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="ar" />
-  
+
     <!-- Canonical -->
     <link rel="canonical" href="https://yooussef.com" />
-  
+
     <!-- Favicon -->
-    <link rel="icon" href="/public/images/favicon.png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/public/images/favicon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/images/favicon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/images/favicon.png" />
-  
+    <link rel="icon" href="//images/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="180x180"
+      href="//images/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="//images/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16"
+      href="//images/favicon.png" />
+
     <!-- Theme Color -->
     <meta name="theme-color" content="#0f172a" />
-  
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yooussef.com" />
-    <meta property="og:title" content="يوسف الصباحي | مطور ويب متخصص في تحويل أفكارك إلى مواقع مبتكرة" />
-    <meta property="og:description" content="أنا يوسف الصباحي، أصنع مواقع ذكية ومبهرة تساعد شركتك أو مشروعك في جذب العملاء وتحقيق نتائج." />
-    <meta property="og:image" content="public/images/og.jpg" />
+    <meta property="og:title"
+      content="يوسف الصباحي | مطور ويب متخصص في تحويل أفكارك إلى مواقع مبتكرة" />
+    <meta property="og:description"
+      content="أنا يوسف الصباحي، أصنع مواقع ذكية ومبهرة تساعد شركتك أو مشروعك في جذب العملاء وتحقيق نتائج." />
+    <meta property="og:image" content="https://yooussef.com/images/og2.jpg" />
     <meta property="og:site_name" content="يوسف الصباحي | Web Developer" />
     <meta property="og:locale" content="ar_AR" />
-  
+
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://yooussef.com" />
-    <meta name="twitter:title" content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
-    <meta name="twitter:description" content="خد فكرتك وخليني أحوّلها لموقع ناجح ومميز باستخدام أحدث تقنيات الويب." />
-    <meta name="twitter:image" content="public/images/og.jpg" />
-  
+    <meta name="twitter:title"
+      content="يوسف الصباحي | مبرمج مواقع محترف يصنع مواقع تبهر جمهورك" />
+    <meta name="twitter:description"
+      content="خد فكرتك وخليني أحوّلها لموقع ناجح ومميز باستخدام أحدث تقنيات الويب." />
+    <meta name="twitter:image" content="https://yooussef.com/images/og2.jpg" />
+
     <!-- Apple Specific -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="يوسف الصباحي" />
-  
+
     <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes" />
-  
+
+    <meta name="application-name" content="يوسف الصباحي" />
+    <meta name="msapplication-TileColor" content="#0f172a" />
+
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
     <script type="application/ld+json">
@@ -58,7 +72,7 @@
         "@type": "Person",
         "name": "يوسف الصباحي",
         "url": "https://yooussef.com",
-        "image": "https://yooussef.com/public/images/og.jpg",
+        "image": "https://yooussef.com/https://yooussef.com/images/og2.jpg",
         "jobTitle": "Full Stack Web Developer",
         "worksFor": {
           "@type": "Organization",
@@ -71,16 +85,17 @@
         ]
       }
       </script>
-<!-- Google Analytics -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W1FEKN1HRB"></script>
-<script>
+    <!-- Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script async
+      src="https://www.googletagmanager.com/gtag/js?id=G-W1FEKN1HRB"></script>
+    <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-W1FEKN1HRB');
-</script>     
+</script>
     <!-- Dark Mode Default -->
     <script>
       (function () {
