--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <!-- Favicons -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- Core Meta Tags - محسنة للكلمات المفتاحية وطول أمثل -->
   <title>يوسف الصباحي | مبرمج ومطور مواقع محترف</title>
@@ -258,18 +266,6 @@
   <meta name="twitter:image" content="https://yooussef.com/images/og2.jpg">
   <meta name="twitter:image:alt" content="يوسف الصباحي - مطور ويب خبير في الرياض">
 
-  <!-- Favicon and App Icons - محسنة بأحجام متعددة -->
-  <link rel="icon" href="/images/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-  <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#0f172a">
-  <link rel="shortcut icon" href="/images/favicon.ico">
-  <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
-
-  <!-- Web App Manifest -->
-  <link rel="manifest" href="/manifest.json">
-
   <!-- Theme Color -->
   <meta name="theme-color" content="#0f172a">
   <meta name="msapplication-TileColor" content="#0f172a">
@@ -322,7 +318,6 @@
     media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="/images/splash/apple-splash-828-1792.jpg"
     media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/images/apple-touch-icon-precomposed.png">
 
   <!-- Chrome, Edge, and Opera Specific -->
   <meta name="color-scheme" content="dark light">
@@ -344,11 +339,6 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5, shrink-to-fit=no">
   <meta http-equiv="Cache-Control" content="public, max-age=86400, must-revalidate">
-
-  <!-- Progressive Web App Improvements -->
-  <meta name="apple-touch-fullscreen" content="yes">
-  <link rel="prefetch" href="/fonts/cairo-arabic-400.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="prefetch" href="/fonts/cairo-arabic-700.woff2" as="font" type="font/woff2" crossorigin>
 
   <!-- Better Print Support -->
   <meta name="format-detection" content="telephone=no">
