--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
+
   <!-- Favicons -->
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/images/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
+  <link rel="icon" href="/images/favicon.ico?v=2" type="image/x-icon">
   <link rel="manifest" href="/manifest.json">
 
   <!-- Core Meta Tags - محسنة للكلمات المفتاحية وطول أمثل -->
@@ -368,7 +369,17 @@
       'page_category': 'homepage'
     });
   </script>
+  <!-- علامة جوجل (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W1FEKN1HRB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-W1FEKN1HRB');
+  </script>
   <!-- Dark Mode Default -->
   <script>
     (function() {
